fixed search overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -180,7 +180,7 @@ ul {
 }
 
 #map {
-  height: 57%; 
+  height: 50%; 
   width: 80%;
   margin: 0 auto 25px;
   box-shadow: 0px -20px 10px -20px black;
@@ -308,6 +308,7 @@ ul {
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin-bottom: 0px;
 }
 
 .forms-container{
@@ -325,7 +326,6 @@ ul {
   box-shadow:none !important;
   border-radius: 10px;
 }
-
 
 #current-specials-text {
   font-family: 'Poppins', sans-serif;
